methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot:32: error: expected class or object definition
def faireFleur(){
^FlowerPot:41: error: expected class or object definition
def fairePetale(c:Color){
^FlowerPot:48: error: expected class or object definition
def faireCentre(){
^FlowerPot:54: error: expected class or object definition
def marquerSol(c:Color){
^FlowerPot:60: error: Unmatched closing brace '}' ignored here
}
^