methods.flowerpot.FlowerPot.scala.code
def growFlowers() {
  var color:Color = Color.RED
  for (fleur <- 1 to 5) {
    fleur match {
    	case 2 => color = Color.CYAN
    	case 3 => color = Color.ORANGE
    	case 4 => color = Color.PINK
    	case 5 => color = Color.GREEN
  	}
    if (fleur == 2) {
    	setX(5)
    	setY(2)
 	  }
    else if (fleur == 3) {
      setX(3)
      setY(4)
    }
    else if(fleur == 4) {
      setX(0)
      setY(6)
    }
    else if(fleur == 5) {
      setX(5)
    }
    
    faireFleur()
    }
  }
  setPos(0,5)
}

def faireFleur(){
  gauche()
    
  for (i <- 1 to 4)
		fairePetale(color)
    
  faireCentre()
}
  
def fairePetale(c:Color){
  marquerSol(c)
  avance()
  droite()
  avance()
}
  
def faireCentre(){
  droite()
  avance()
  marquerSol(Color.YELLOW)
}

def marquerSol(c:Color){
  setCouleurBrosse(c)
  baisseBrosse()
  leveBrosse()
}